Fulfill some to-dos, do spellchecking

--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -21,7 +21,7 @@
   dependency structure of involved random variables be extracted from it.  Given this structure,
   analytical Gibbs conditionals can be calculated for a large set of models and passed to Turing's
   inference mechanism, where they are used in Markov-Chain Monte Carlo samplers approximating the
-  modelled distribution.
+  modeled distribution.
 \end{abstract}
 
 %%% Local Variables:
