--- a/thesis/notation.tex
+++ b/thesis/notation.tex
@@ -24,13 +24,13 @@
     the associated probability measure.  The example is equivalent to the statement
     \(\frac{\dif P_{X}}{\dif \mu} = p_{X}\).
   \item[{\(X_{i} \from \distr{Normal}(\mu, \sigma)\)}] The tilde notation for describing random
-    variables is used throughout, often without explicitely specifying dependence or independence,
+    variables is used throughout, often without explicitly specifying dependence or independence,
     where understood from context.  Named distributions that are not themselves random variables are
     spelled out in upright script.
   \item[{\(Y \from q(\cdot, X_{i-1})\)}] The same notation is used when a random variable is specified
     to be sampled from a given, possibly unnormalized, density.  In this context and elsewhere, the
     midpoint is employed to denote anonymous functions of one variable given by partial application.
-  \item[{\(y \mapsto \prob{x \given y, z}\)}] Anonymous functions are distinguised from function
+  \item[{\(y \mapsto \prob{x \given y, z}\)}] Anonymous functions are distinguished from function
     evaluation; this is crucial to differentiate between probability densities and likelihoods, for
     example.
   \item[\(\int \prob{x} \dif x = 1\)] Integrals over the whole domain of a density or measure are
