--- a/thesis/automatic_graph_tracking.tex
+++ b/thesis/automatic_graph_tracking.tex
@@ -4,7 +4,7 @@
 It has been described above that there is a trade-off between source-transformation methods and
 library-based (operator overloading) approaches for tracking computation graphs.  Since the ultimate
 goal of this work was to analyze dynamic probabilistic models written in \turingjl{}, properties of
-both were derired.  Operator overloading has been considered as well, since it would have allowed to
+both were derived.  Operator overloading has been considered as well, since it would have allowed to
 potentially reuse AD implementations, but was thought insufficient, because the structure of control
 flow and recursion are lost.  Inspired the the work of \textcite{innes2018don}, it seemed most
 promising to start from a source-transformation based approach implemented over the intermediate
@@ -17,8 +17,8 @@ However, the dynamicity of the trace structure of general probabilistic programs
 preserved and exposed to the user, for each function evaluation~-- which is different from the AD
 usage, where the adjoint function is already the ultimate goal, and does not change with the
 arguments.  Hence, a method for a hybrid version was developed: through an IR transformation, the
-original code of a function to be tracked should be exteded by additional statements to record a
-trace of the executed statements and control flow operations at runtime.  The algorithm and data
+original code of a function to be tracked should be extended by additional statements to record a
+trace of the executed statements and control flow operations at run-time.  The algorithm and data
 structure on which this approach is based have already been shortly described in
 \textcite{gabler2019graph}, and will be more extensively explained below.  An open source
 implementation is available
@@ -27,7 +27,7 @@ online\footnote{\protect\url{https://github.com/TuringLang/IRTracker.jl}}.
 As we have seen above, in section~\ref{sec:comp-metapr-julia}, generated functions allow the
 inspection and transformation of the intermediate representation passed-in functions.  This
 technique can be applied to recursively traverse the implementation of a given function, annotating
-each operation with necessay tracking statements, and changing the inputs and outputs accordingly to
+each operation with necessary tracking statements, and changing the inputs and outputs accordingly to
 extract this information from outside.  To ensure sufficient generality, we requite the following
 properties of the tracking system:
 \begin{enumerate}
@@ -56,7 +56,7 @@ Additionally, there are special types for the tape- and block references, and an
 \jlinl{TapeExpression}, mimicking the built-in \jlinl{Expr}, but adding more semantic distinctions
 (such as between references and constants, and between primitive and non-primitive function calls).
 On top of this, an API to query the graph structure is provided, allowing, for example, to find all
-children or parents of a tape refererence up to a certain depth, or extract data from nodes, such as
+children or parents of a tape reference up to a certain depth, or extract data from nodes, such as
 referenced variables, arguments, or metadata.
 
 \begin{figure}[t]
@@ -65,7 +65,7 @@ referenced variables, arguments, or metadata.
   \caption{Extended Wengert list for one run of the stochastic function geom (only three levels
     shown). The central box is the tracked graph of the call \protect\jlinl{geom(1, 0.6)}. The other
     boxes show the original IR of the called non-primitive functions, to which the nodes are
-    linked.  Angle brackets indictate constant values.}
+    linked.  Angle brackets indicate constant values.}
   \label{fig:ext-wengert-list}
 \end{figure}
 
@@ -116,7 +116,7 @@ statements as the original.  The basic blocks and control structure are preserve
 redirection of return statements to the one block at the end.  Due to JIT compilation, the
 transformation is performed at most a constant number of times per method, and then stored as
 compiled code.  However, the tracking~-- the recording of all statements in the extended Wengert
-list structure~-- happens at every execution during runtime.  Furthermore, the extended code is
+list structure~-- happens at every execution during run-time.  Furthermore, the extended code is
 available to all standard optimizations performed in the following passes of type inference and
 lowering.
 
@@ -157,7 +157,7 @@ The corresponding transformed IR is shown in the lower part of the figure, highl
   argument, which was a literal value \jlinl{1} in the original IR, is preserved as a literal as
   well (wrapped into a \jlinl{QuoteNode} object for technical reasons).
 \item Finally, the function and arguments are passed to the function \jlinl{trackedcall}, which
-  takes care of acually calling the original function.  Doing so, it will, if the called function is
+  takes care of actually calling the original function.  Doing so, it will, if the called function is
   not considered primitive, recursively track it as well, and pack the resulting child nodes into a
   new nested node, together with the return value.  Otherwise, the result will simply be stored in a
   special primitive-call node.
@@ -189,6 +189,7 @@ primitives, which require more careful handling.
   \begin{algorithmic}
     \State \textbf{Input:} \jlinl{original_ir}
     \State \textbf{Output:} New IR with tracking statements inserted
+    \Statex
     %\Procedure{TransformIR}{\texttt{original\_ir}}
     %
     \State Initialize empty IR object \jlinl{new_ir}
@@ -248,14 +249,14 @@ primitives, which require more careful handling.
     called by \protect\jlinl{trackcall}, which assembles the resulting value and IR into a new node
     with the correct metadata.  The details of statement tracking and branch transformation are
     explained in the text; the description of metadata recording, and the mechanisms to correctly
-    rename SSA variables during the transformation and tape references at runtime were left out for
+    rename SSA variables during the transformation and tape references at run-time were left out for
     simplicity.\label{alg:ir-transform}}
 \end{algorithm}
 
 To provide some modularity and extensibility to the system, it also affords customization of some
-behaviour by \emph{tracing contexts}.  All of the \jlinl{trackedX} functions explained above, used
+behavior by \emph{tracing contexts}.  All of the \jlinl{trackedX} functions explained above, used
 directly in the transformed code, are really special methods that work directly on the recorder
-object.  Their behaviour~-- namely, performing the actual method calls and constructing the nodes~--
+object.  Their behavior~-- namely, performing the actual method calls and constructing the nodes~--
 is defined in another method of the same function, which dispatches on a context object stored in
 the recorder object, and can be overloaded by the user for a custom context.  
 
@@ -285,7 +286,7 @@ intrinsics and functions defined in C), which leads to very large recursive trac
 this, we can introduce a new \jlinl{DepthLimitContext}, as shown in
 listing~\ref{lst:depthlimitcontext}.  There, the function \jlinl{canrecur} is overloaded to stop at
 depth \jlinl{maxlevel}; this method will be called to determine whether a tracked function is
-considered primitive.  Besides this, we also have to redefine the behaviour of \jlinl{trackednested}
+considered primitive.  Besides this, we also have to redefine the behavior of \jlinl{trackednested}
 to specify that for non-primitive functions, i.e., nested calls, the level remembered in the context
 object should be updated.  \jlinl{recordnestedcall} is a built-in function of the library that
 simply performs the recursive tracking, then.
@@ -306,7 +307,7 @@ repository.
 
 The extended Wengert list created by tracking a function can be used for many purposes in which
 computation graphs are required.  All algorithms that can be formulated as message-passing can
-directly work on this, as well as all methods that operate on runtime dependency graphs, from simple
+directly work on this, as well as all methods that operate on run-time dependency graphs, from simple
 debugging to concolic execution (see discussion below).
 
 As a proof of concept, a small backward-mode AD system was implemented in the form of a context.
@@ -314,13 +315,13 @@ This simply required storing the derivative operators for all intermediate value
 pass, and writing a backward pass as graph traversal on the resulting computation
 graph.\footnote{\href{https://github.com/TuringLang/IRTracker.jl/blob/760143734de1bf4e90da655d833e7999fc0ab2de/test/test_backward_ad.jl}{\url{https://github.com/TuringLang/IRTracker.jl/blob/master/test/test_backward_ad.jl}}}
 The implementation has been tested on some simple composed functions, but is not intended for
-serious application.  Due to the very abstract nature of the implemetation, not more individual
+serious application.  Due to the very abstract nature of the implementation, not more individual
 evaluations of it are performed, except unit tests to ensure basic correctness of the interface.
 The system developed in chapter~\ref{cha:graph-track-prob} provides a larger \enquote{integration
   test}, though.
 
 More potential use cases arise when the tracked model is actually static~-- in this case, the
-complete struture can be recovered from one graph tracking pass.  This can then be analyzed and used
+complete structure can be recovered from one graph tracking pass.  This can then be analyzed and used
 in various ways; even more so, when more semantic knowledge about the model exists, such as meanings
 of certain domain-specific functions.  Specifically, two show-cases for the system, applied to
 probabilistic programs written in \turingjl{} were considered: conjugacy detection as described by
@@ -330,7 +331,7 @@ shown in the next chapter, was finally executed, though.
 
 The implementation is limited in two respects.  First, in practical terms, there is are some
 trade-offs to be made regarding the storage of intermediate results and functions in nodes.  In the
-current design, nodes are parametrized by the types of their contents, which leads to very large
+current design, nodes are parameterized by the types of their contents, which leads to very large
 types, and potential slow done during type inference.  Not doing this would prevent type stability
 of the transformed code, since all of the intermediate values that are passed directly in the
 original code are wrapped in node structures and unwrapped again.  (There are even still some cases
@@ -339,15 +340,15 @@ could be passed unwrapped into the \jlinl{trackedcall} functions, besides the no
 would lead to more complicated handling of values, though.)
 
 The other, more fundamental restriction is one that is inherent to dynamic tracing: alternatives
-path, that were not taken due to runtime control flow, are not recorded.  Compared to a traditional
+path, that were not taken due to run-time control flow, are not recorded.  Compared to a traditional
 operator overloading system, \irtrackerjl{} does at least preserve the information about which
 branches were taken, and for which reason in the case of conditional branches; this is not enough
 for complete static analysis in all cases, though.  The system is sufficient for code that does not
 change data flow paths depending on arguments or stochastic decisions, though.
 
-One possible direction for extension that would extend the applicablity somewhat is concolic
+One possible direction for extension that would extend the applicability somewhat is concolic
 execution \parencite{zeller2019concolic}, in which the function is traced multiple times with
-different arguments, whose exact values are determined by contraint solving so that all possible
+different arguments, whose exact values are determined by constraint solving so that all possible
 execution paths are covered.  This is potentially slow, and goes against the spirit of the idea of
 tracking once, in parallel to the normal forward execution, though.  Also, it is not applicable to
 general user-defined types, but constrained to whatever theories the used SMT solver supports.
