--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -19,17 +19,17 @@ given program for the purpose of abstract interpretation.
 
 There are several options how to provide the computation graph in question to an application, many
 of which are already established in the AD community (see \textcite{baydin2018automatic} for a
-survey on AD methods).  For one, graphs can be required to be written out explicitely by the user,
+survey on AD methods).  For one, graphs can be required to be written out explicitly by the user,
 by defining providing a library to build graphs \enquote{by hand}
 (e.g. \textcite{chewxy2020gorgonia,jia2014caffe}~-- these interfaces tend to be more low level) or
 through a higher-level API (e.g. PyTorch \parencite{paszke2017automatic} or TensorFlow
 \parencite{abadi2015tensorflow}).  Such APIs are called \emph{operator overloading} in AD language,
-because they extend existing operations to additionally track the computation graph at runtime on
+because they extend existing operations to additionally track the computation graph at run-time on
 so-called tapes or Wengert lists \parencite{bartholomew-biggs2000automatic}.  This kind of tracking
 is dynamic, in the sense that a new tape is recorded for every execution.  However, being
 implemented on a library level, it usually requires the programmer to use non-native constructs
 instead of language primitives, leading to cognitive overhead.  This notably happens for control
-statements, which can rarely be \enquote{overloaded}.  Furthermore, there are additional runtime
+statements, which can rarely be \enquote{overloaded}.  Furthermore, there are additional run-time
 costs due to the separate interpretation of derivatives stored on the tape.
 
 Alternatively, an implementation can allow the user to write out computations as a \enquote{normal}
@@ -41,8 +41,8 @@ programming language infrastructure, like the abstract syntax tree (AST), or an 
 representation (IR).  They operate on the syntactic structure of the whole program, during or before
 compilation.  Unlike in operator overloading, it is hence possible to inspect and exploit control
 structures directly. This can lead to more efficient results, compared to operator overloading,
-since the transformation is done only once per program and eligible for compiler optimisations.
-Additionally, the user is not restricted to the domain specific language provided by a libray, and
+since the transformation is done only once per program and eligible for compiler optimizations.
+Additionally, the user is not restricted to the domain specific language provided by a library, and
 can use regular language constructs, data structures, and custom functions rather freely.  But in
 this approach, usually, no records of the actual execution paths are constructed explicitly~--
 purely static information is used only at compile time, and cannot be accessed for further analysis
@@ -53,7 +53,7 @@ at each run.  Examples of this from machine learning are models with non-uniform
 trees \parencite{socher2011parsing} or molecular graphs \parencite{bianucci2000application},
 Bayesian nonparametric models \parencite{hjort2010bayesian}, or simply the occurrence of stochastic
 control flow in any probabilistic model.  Such programs we call dynamic models.  The lack of an
-explicit, unique graph structure makes it impossible, or at least diffult, to apply source
+explicit, unique graph structure makes it impossible, or at least difficult, to apply source
 transformation approaches on them.  Operator overloading is the more direct way for supporting
 dynamic models, since it automatically records a new tape for each input. In fact, many of the
 already mentioned state-of-the-art machine learning libraries are based on dynamic graphs using
@@ -73,13 +73,13 @@ static and dynamic models, using source transformation instead of operator overl
 recent work on differential programming \parencite{innes2018don}, the approach transforms the
 intermediate representation used by the compiler of the Julia programming language.  This system can
 be used to dynamically track computation graphs of any Julia program, including machine learning
-models and probabilistic programming systems, without having to explicitely declare graph
+models and probabilistic programming systems, without having to explicitly declare graph
 structures. The transformation is implemented as a custom part of the compilation process.  Its
-result is passed back to the compiler, where it can be optimised further. At run time, both data and
+result is passed back to the compiler, where it can be optimized further. At run time, both data and
 control path are tracked alongside the original calculations, in the form of a nested data
 structure.  This data structure contains all functions called during execution, enriched by recorded
 control flow decisions and possibly meta-information that can be used to analyse the
-execution. Thus, the system combines advantages of a source transformation with a tape-based runtime
+execution. Thus, the system combines advantages of a source transformation with a tape-based run-time
 approach.
 
 
@@ -88,12 +88,12 @@ approach.
 \label{sec:related-work}
 
 The topic of this thesis crosses several disciplines~-- at least automatic differentiation, compiler
-and programming language theory, and probabilitstic programming.  Since these have not always worked
+and programming language theory, and probabilistic programming.  Since these have not always worked
 together, similar principles may be have been found or (re-)introduced in each of them.
 
 Automatic differentiation has a long history, in which different styles becoming more or less
 fashionable depending on the dominating use-case and available languages and infrastructure.
-Traditionally, numerical code in Fortran or C was differentiated by whole-source transfomation
+Traditionally, numerical code in Fortran or C was differentiated by whole-source transformation
 systems like Tapenade \parencite{tapenadedevelopers2019tapenade}.  In recent years, after phase of
 many library-based (or \enquote{operator overloading}) systems that were driven by the rise of deep
 learning \parencite{abadi2015tensorflow,paszke2017automatic,neubig2017dynet,tokui2015chainer},
@@ -126,7 +126,7 @@ layers of intermediate representations used in the same system.
 Recently, special intermediate representations for machine learning applications have been
 introduced.  One of them is MLIR (\enquote{machine learning intermediate representation},
 \textcite{lattner2020mlir}), with the purpose of forming a reusable mid-layer between programming
-languages and runtimes, featuring exchangeability between different machine learning frameworks and
+languages and run-times, featuring exchangeability between different machine learning frameworks and
 and \enquote{accelerators} (pieces of hardware), while taking advantage of modern compiler
 technology similar to LLVM.  A second one is Swift's intermediate representation, SIL, in the Swift
 for TensorFlow project.  JAX \parencite{bradbury2018jax} plays a similar role for expression-graph
@@ -148,7 +148,7 @@ operations.  The \enquote{dynamicity} problem can be approached in other ways as
 \emph{stochastic memoization} is employed in the probabilistic programming languages Church
 \parencite{goodman2012church} and Venture \parencite{mansinghka2014venture} to produce what in the
 latter is called \enquote{probabilistic execution traces}: multiple different traces are dynamically
-stored as alternative paralles paths in the execution trace, with possible interconnections.
+stored as alternative parallels paths in the execution trace, with possible interconnections.
 
 %%% Local Variables: 
 %%% TeX-master: "main"
